Fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,8 @@
 
 html,
 body {
-	width: 100%;
 	margin: 0px;
 	padding: 0px;
-	overflow-x: hidden;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 		sans-serif;
